@@ -13,4 +13,5 @@ src/preferences.cpp
 src/preferences_display.cpp
 src/show_dialog.cpp
 src/terrain_filter.cpp
+src/terrain_translations.cpp
 src/widgets/file_menu.cpp
