@@ -42,6 +42,8 @@ Version 1.3.6+svn:
    * rewrote the config merge routine (should improve parse time slightly)
    * various code cleanups
    * Isle of Anduin renamed to Isle of Alduin to avoid copyright problems.
+   * the assertion 'str.size() <= 4' no longer happens instead the terrain is
+      read as 'void' and an ingame message is shown
 
 Version 1.3.6:
  * language and i18n:
